--- a/growth_partners/enroll-with-us-as-supplier-vendor-contractor.html
+++ b/growth_partners/enroll-with-us-as-supplier-vendor-contractor.html
@@ -311,8 +311,8 @@
                   <option value="Morya">Morya</option>
                   <option value="Sugam Park">Sugam Park</option>
                   <option value="Sugam Habitat">Sugam Habitat</option>
-                  <option value="Sugam Sudhir">Sugam Sudhir</option>
-                  <option value="Sugam Serenity">Sugam Serenity</option>
+                  <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                  <option value="Sugam Serenity">Sugam Serenity</option> -->
                 </select>
               </div>
               <div class="form-group">
