--- a/about-us.html
+++ b/about-us.html
@@ -177,8 +177,10 @@
     </nav>
     <section id="sugam-about">
       <div class="container">
-        <h1 class="font-weight-bold text-theme">About Sugam Homes</h1>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h1 class="font-weight-bold text-theme">About Sugam Homes</h1>
+          <div class="line"></div>
+        </div>
         <p class="mt-4">
           3.5 decades of presence, over 25 projects, 7000+ happy customers and
           30+ awards- Sugam Homes has definitely touched the zenith of success in
@@ -256,9 +258,11 @@
       <!-- good -->
       <div class="good">
         <div class="container">
-          <h2 class="font-weight-bold text-theme">Here for Good</h2>
-          <div class="line"></div>
-          <h6 class="mt-4 font-weight-bold">GREEN & SUSTAINABLE</h6>
+          <div class="c-flex">
+            <h2 class="font-weight-bold text-theme">Here for Good</h2>
+            <div class="line"></div>
+            <h6 class="mt-4 font-weight-bold">GREEN & SUSTAINABLE</h6>
+          </div>
           <p>
             With climate change upon us, it’s vital to create environmentally
             conscious buildings that can adapt to the mercurial weather. Green
@@ -271,11 +275,15 @@
       <!-- Awards -->
       <div class="awards">
         <div class="container">
-          <h2 class="font-weight-bold text-theme">Awards</h2>
-          <div class="line"></div>
+          <div class="c-flex">
+            <h2 class="font-weight-bold text-theme">Awards</h2>
+            <div class="line"></div>
+          </div>
           <!-- 2020 -->
           <div class="award mt-5">
-            <h6 class="font-weight-bold ml-3">Awards 2020</h6>
+            <div class="c-flex">
+              <h6 class="font-weight-bold ml-3">Awards 2020</h6>
+            </div>
             <div class="details mt-4">
               <img src="./assets/images/icon.png" alt="icon" />
               <p>
@@ -285,7 +293,9 @@
           </div>
           <!-- 2019 -->
           <div class="award mt-5">
-            <h6 class="font-weight-bold ml-3">Awards 2019</h6>
+            <div class="c-flex">
+              <h6 class="font-weight-bold ml-3">Awards 2019</h6>
+            </div>
             <div class="details mt-4">
               <img src="./assets/images/icon.png" alt="icon" />
               <p>
@@ -317,7 +327,9 @@
           </div>
           <!-- 2018 -->
           <div class="award mt-5">
-            <h6 class="font-weight-bold ml-3">Awards 2018</h6>
+            <div class="c-flex">
+              <h6 class="font-weight-bold ml-3">Awards 2018</h6>
+            </div>
             <div class="details mt-4">
               <img src="./assets/images/icon.png" alt="icon" />
               <p>
@@ -442,7 +454,9 @@
           </div>
           <!-- 2017 -->
           <div class="award mt-5">
-            <h6 class="font-weight-bold ml-3">Awards 2017</h6>
+            <div class="c-flex">
+              <h6 class="font-weight-bold ml-3">Awards 2017</h6>
+            </div>
             <div class="details mt-4">
               <img src="./assets/images/icon.png" alt="icon" />
               <p>
@@ -466,7 +480,9 @@
           </div>
           <!-- 2016 -->
           <div class="award mt-5">
-            <h6 class="font-weight-bold ml-3">Awards 2016</h6>
+            <div class="c-flex">
+              <h6 class="font-weight-bold ml-3">Awards 2016</h6>
+            </div>
             <div class="details mt-4">
               <img src="./assets/images/icon.png" alt="icon" />
               <p>
@@ -575,8 +591,8 @@
                   <option value="Morya">Morya</option>
                   <option value="Sugam Park">Sugam Park</option>
                   <option value="Sugam Habitat">Sugam Habitat</option>
-                  <option value="Sugam Sudhir">Sugam Sudhir</option>
-                  <option value="Sugam Serenity">Sugam Serenity</option>
+                  <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                  <option value="Sugam Serenity">Sugam Serenity</option> -->
                 </select>
               </div>
               <div class="form-group">
