--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                             <h4>Prakriti</h4>
                                             <p>
                                                 2 & 3 BHK | 824 - 994 Sqft Area | 2 BHK starts from 31.54 Lacs | <br />
-                                                On Kusumba, Kolkata, West Bengal
+                                                Off Kamalgazi more, Kolkata, West Bengal
                                             </p>
                                             <a href="./projects/prakriti.html" class="btn btn-custom">View project</a>
                                         </div>
@@ -891,8 +891,8 @@
                                     <option value="Morya">Morya</option>
                                     <option value="Sugam Park">Sugam Park</option>
                                     <option value="Sugam Habitat">Sugam Habitat</option>
-                                    <option value="Sugam Sudhir">Sugam Sudhir</option>
-                                    <option value="Sugam Serenity">Sugam Serenity</option>
+                                    <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                                    <option value="Sugam Serenity">Sugam Serenity</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
