--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -548,7 +548,7 @@
                 <option value="Sugam Habitat">Sugam Habitat</option>
                 <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
                 <option value="Sugam Serenity">Sugam Serenity</option> -->
-              </select>
+              <!-- </select>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Your Name*</label>
@@ -579,7 +579,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer> --> -->
 
   <!-- Enquire now side btn -->
   <button type="button" data-toggle="modal" data-target="#exampleModal2"
