--- a/projects/completed.html
+++ b/projects/completed.html
@@ -560,11 +560,11 @@
 
         <!-- book now btn -->
         <div class="text-center mt-5 book-online">
-            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
         </div>
         <!-- contact us side -->
         <div class="text-center mt-5 book-online-1">
-            <a data-toggle="modal" data-target="#exampleModal6" href="" class="btn btn-custom">Enquiry Now</a>
+            <a data-toggle="modal" data-target="#exampleModal6" href="" class="btn btn-custom">ENQUIRY NOW</a>
         </div>
         <!-- Contact us side modal -->
         <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
