--- a/projects/sugam-park.html
+++ b/projects/sugam-park.html
@@ -178,8 +178,7 @@
                     <img class="mt-2" src="../assets/images/park/banner001.jpg" alt="" width="100%" height="auto" />
                     <div class="">
                         <div class="row">
-                            <div class="col-lg-3"></div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-6">
                                 <ul class="list mt-2 p-3">
                                     <li class="lifloat">Club house</li>
                                     <li class="lifloat">Children’s play area (outdoor &amp; indoor)</li>
@@ -191,7 +190,7 @@
                                     <li class="lifloat">Table tennis</li>
                                 </ul>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-6">
                                 <ul class="list mt-2 p-3">
                                     <li class="lifloat">Gymnasium</li>
                                     <li class="lifloat">Yoga/ meditation room</li>
@@ -202,7 +201,6 @@
                                     <li class="lifloat">Shuttle bus service</li>
                                 </ul>
                             </div>
-                            <div class="col-lg-3"></div>
                         </div>
                         <!-- <ul class="list mt-2 p-3">
                             <li class="lifloat">Club house</li>
@@ -530,11 +528,11 @@
 
         <!-- book now btn -->
         <div class="text-center mt-5 book-online">
-            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
         </div>
         <!-- contact us side -->
         <div class="text-center mt-5 book-online-1">
-            <a data-toggle="modal" data-target="#exampleModal9" href="" class="btn btn-custom">Enquiry Now</a>
+            <a data-toggle="modal" data-target="#exampleModal9" href="" class="btn btn-custom">ENQUIRY NOW</a>
         </div>
         <!-- Contact us side modal -->
         <div class="modal fade" id="exampleModal9" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
