--- a/projects/morya.html
+++ b/projects/morya.html
@@ -159,11 +159,11 @@
             </div>
             <!-- book now btn -->
             <div class="text-center mt-5 book-online">
-                <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+                <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
             </div>
             <!-- contact us side -->
             <div class="text-center mt-5 book-online-1">
-                <a data-toggle="modal" data-target="#exampleModal5" href="" class="btn btn-custom">Enquiry Now</a>
+                <a data-toggle="modal" data-target="#exampleModal5" href="" class="btn btn-custom">ENQUIRY NOW</a>
             </div>
             <!-- Contact us side modal -->
             <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -220,7 +220,7 @@
                         plunges. The project has been thoughtfully curated to cater to every comfort that’s filled with the choicest lifestyle
                         features.
                     </p>
-                    <div class="c2-flex">
+                    <!-- <div class="c2-flex"> -->
 
                         <ul class="ml-2">
                             <li>80% Open Space</li>
@@ -233,7 +233,7 @@
                             <li>Pleasant Walkway, Jogging Track, Outdoor Exercising Area</li>
                             <li>Banquet Hall, Mini Theater, Cafeteria, Library</li>
                         </ul>
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
             <!-- workthrough -->
@@ -414,55 +414,55 @@
                     <div class="text-center">
                         <div class="urban_lakes_banner mt-5">
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/Tower-A3-January-2021.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/Tower-A3-January-2021.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower A3 - January 2021
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/A3 Tower.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/A3 Tower.jpg" alt="banner1" width="100%" height="auto" />
                                 <p>
                                     Tower A3 - January 2022
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/Tower-A4-January-2021.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/Tower-A4-January-2021.jpg" alt="banner1" width="100%" height="auto" />
                                 <p>
                                     Tower A4 - January 2021
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/A4.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/A4.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower A4 - January 2022
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/Tower-B2-January-2021.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/Tower-B2-January-2021.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower B2 - January 2021
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/Tower-A3-A4-combined-January-2021.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/Tower-A3-A4-combined-January-2021.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower A3 A4 - January 2021
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/A3, A4.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/A3, A4.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower A3 A4 - January 2022
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/A3 and A4.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/A3 and A4.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower A3 A4 - January 2022
                                 </p>
                             </div>
                             <div class="slick-card-1">
-                                <img src="../assets/images/morya/Tower-B1-January-2021.jpg" alt="banner1" />
+                                <img src="../assets/images/morya/Tower-B1-January-2021.jpg" alt="banner1" width="100%" height="auto"/>
                                 <p>
                                     Tower B1 - January 2021
                                 </p>
