--- a/projects/sugam-business-park.html
+++ b/projects/sugam-business-park.html
@@ -224,7 +224,7 @@
                         <h2 class="text-theme font-weight-bold">AMENITIES</h2>
                         <div class="line"></div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-5">
                         <div class="col-lg-6 no-bullets">
                             <ul>
                                 <li> <span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities1.png" alt=""> </span> B+G+10 Building</li>
@@ -259,7 +259,7 @@
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3684.2929268336356!2d88.433397!3d22.568145!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x71861af46a1692b9!2sSugam%20Business%20Park!5e0!3m2!1sen!2sin!4v1624620513238!5m2!1sen!2sin"
                         allowfullscreen=""
                         loading="lazy"
-                        class="mt-3"
+                        class="mt-5"
                     ></iframe>
                 </div>
             </div>
@@ -271,7 +271,7 @@
                         <h2 class="text-theme font-weight-bold">LOCATION PROXIMITIES</h2>
                         <div class="line"></div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-5">
                         <div class="col-lg-6">
                             <ul>
                                 <li>College More - 1.5 Kms | 5 Mins</li>
@@ -416,11 +416,11 @@
 
         <!-- book now btn -->
         <div class="text-center mt-5 book-online">
-            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
         </div>
         <!-- contact us side -->
         <div class="text-center mt-5 book-online-1">
-            <a data-toggle="modal" data-target="#exampleModal7" href="" class="btn btn-custom">Enquiry Now</a>
+            <a data-toggle="modal" data-target="#exampleModal7" href="" class="btn btn-custom">ENQUIRY NOW</a>
         </div>
         <!-- Contact us side modal -->
         <div class="modal fade" id="exampleModal7" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
