--- a/projects/sugam-park.html
+++ b/projects/sugam-park.html
@@ -528,7 +528,7 @@
 
         <!-- book now btn -->
         <div class="text-center mt-5 book-online">
-            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
+            <a href="../enquire.html" class="btn btn-custom">BOOK ONLINE</a>
         </div>
         <!-- contact us side -->
         <div class="text-center mt-5 book-online-1">
@@ -540,7 +540,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLabel">
-                    Thank you for Enquiring About Morya
+                    Thank you for Enquiring About Sugam Park
                   </h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
