--- a/projects/completed.html
+++ b/projects/completed.html
@@ -559,15 +559,15 @@
         </div>
 
         <!-- book now btn -->
-        <div class="text-center mt-5 book-online">
-            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">BOOK ONLINE</a>
-        </div>
+        <!-- <div class="text-center mt-5 book-online">
+            <a href="../enquire.html" class="btn btn-custom">BOOK ONLINE</a>
+        </div> -->
         <!-- contact us side -->
-        <div class="text-center mt-5 book-online-1">
+        <!-- <div class="text-center mt-5 book-online-1">
             <a data-toggle="modal" data-target="#exampleModal6" href="" class="btn btn-custom">ENQUIRY NOW</a>
-        </div>
+        </div> -->
         <!-- Contact us side modal -->
-        <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -603,7 +603,7 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- footer -->
         <footer>
