--- a/enquire.html
+++ b/enquire.html
@@ -182,10 +182,14 @@
               <div class="form-group">
                 <select class="form-control" id="exampleFormControlSelect1">
                   <option>Select Project</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                  <option>
+                    Sugam Business Park
+                  </option>
+                  <option>Sugam Prakriti</option>
+                  <option>Urban Lakes</option>
+                  <option>Morya</option>
+                  <option>Sugam Park</option>
+                  <option>Sugam Habitat</option>
                 </select>
               </div>
               <div class="form-group">
