--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -582,9 +582,15 @@
   </footer> --> -->
 
   <!-- Enquire now side btn -->
-  <button type="button" data-toggle="modal" data-target="#exampleModal2"
+  <!-- <button type="button" data-toggle="modal" data-target="#exampleModal2"
     class="contact-mod d-none d-sm-block btn-1 btn-brown launch-modal"
-    style="width:130px;height:40px;top:30%;padding:0;border:none;">Enquire Now</button>
+    style="width:130px;height:40px;top:30%;padding:0;border:none;">
+    Enquire Now
+  </button> -->
+  
+  <div class="text-center mt-5 book-online-1">
+      <a data-toggle="modal" data-target="#exampleModal52" href="" class="btn btn-custom">ENQUIRY NOW</a>
+  </div>
 
   <!-- enquire now modal -->
   <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -627,9 +633,13 @@
 
 
   <!-- download brochure side btn -->
-  <div class="contact-mod-1 d-none d-sm-block" style="top:60%;border:none;"><a data-toggle="modal" data-target="#exampleModal3"
+  <!-- <div class="contact-mod-1 d-none d-sm-block" style="top:60%;border:none;"><a data-toggle="modal" data-target="#exampleModal3"
     data-controls-modal="#formpopup" data-backdrop="static" data-keyboard="false" href="javascript:void(0);"
-    class="btn-1 btn-brown launch-modal">Download Brochure</a>
+    class="btn-1 btn-brown launch-modal" >Download Brochure</a>
+  </div> -->
+  <div class="text-center mt-5 book-online" style="right: -67px;">
+    <a href="https://secure.morya.info/users/sign_in" data-toggle="modal" data-target="#exampleModal3"
+    data-controls-modal="#formpopup" data-backdrop="static" data-keyboard="false" href="javascript:void(0);" class="btn btn-custom">DOWNLOAD BROCHURE</a>
   </div>
 
   <!-- download brochure side btn modal -->
