--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                                     <h5 class="card-title">AFFORDABLE</h5>
                                     <p class="card-text">
                                         Over 25 projects and 7000+ happy residents later,we've earned a reputation of 'Pioneers in Affordable Housing
-                                        in Eastern India'.Our belief is that let no one come to us without leaving happier. Our promise is to offer
+                                        in Eastern India'. Our belief is that no one will leave our place without being happy. Our promise is to offer
                                         viability within changing landscapes and times.
                                     </p>
                                 </div>
