--- a/projects/sugam-habitat.html
+++ b/projects/sugam-habitat.html
@@ -202,7 +202,7 @@
                     </div>
                     <iframe
                         class="mt-5"
-                        src="https://www.youtube.com/embed/hXDq75HA1IA"
+                        src="https://www.youtube.com/embed/NctoaLCsRyY"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
