--- a/index.html
+++ b/index.html
@@ -965,5 +965,8 @@
         <!-- custom js -->
         <script src="./js/aos.js"></script>
         <script src="./js/slick-slider.js"></script>
+
+        <!-- Last update by Bijon -->
+        <script src="https://www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript" data-bot="25434143"></script>
     </body>
 </html>
