--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -122,7 +122,7 @@
         <div class="container text-center mt-5">
           <p>
             Sugam Prakriti promises a home free from pollution of any kind. A healthy lifestyle awaits you here. Breathe
-            in fresh air, Walk around natural water body. Reveal in the warm rays of Sun. With 3 Tall towers, Sugam
+            in fresh air, walk around natural water body. Reveal in the warm rays of Sun. With 3 Tall towers, Sugam
             Prakriti offers 231 Apartments with 2 side open, long balcony, landscaped water body, large Kitchen and
             double
             height living- dining space.
@@ -148,8 +148,8 @@
           attractive surrounding that gives us immense joy, happiness to live healthy. Sugam Prakriti offers you what
           exactly you need- a modern-day life. </p>
         <p>
-          Sugam Prakriti promises a home free from pollution of any kind. A healthy lifestyle awaits you here. Breathe
-          in fresh air, Walk around natural water body. Reveal in the warm rays of Sun. With 3 Tall towers, Sugam
+          Breathe
+          in fresh air, walk around natural water body. Reveal in the warm rays of Sun. With 3 Tall towers, Sugam
           Prakriti offers 231 Apartments with 2 side open, long balcony, landscaped water body, large Kitchen and double
           height living- dining space.
         </p>
