--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -468,8 +468,7 @@
           <div class="line"></div>
         </div>
         <div class="row mt-3 ml-0">
-          <p>Simple Pricing For Your Sweet Home. Sugam Prakriti promises a home free from pollution of any kind. A
-            healthy lifestyle awaits you here.</p>
+          <p>Simple Pricing For Your Sweet Home.</p>
           <div class="col-lg-12">
             <ul>
               <li>
