--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -701,6 +701,8 @@
   <!-- custom js -->
   <script src="../js/slick-slider.js"></script>
   <script src="../js/magnific.js"></script>
+  <!-- Last update by Bijon -->
+  <script src="https://www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript" data-bot="25434143"></script>
 </body>
 
 </html>
