--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -2,6 +2,25 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29666809-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-29666809-1');
+  </script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MLNWJZF');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,6 +57,33 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MLNWJZF" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '487545546334072');
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" src="https://www.facebook.com/tr?id=487545546334072&ev=PageView
+  &noscript=1" />
+  </noscript>
+  <!-- End Facebook Pixel Code -->
   <!-- navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -239,7 +285,7 @@
           <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE</h2>
           <div class="line"></div>
         </div>
-<!--         <img class="mt-5" src="../assets/images/park/sg-park-bg.jpg" alt="" width="100%" height="auto" /> -->
+        <!--         <img class="mt-5" src="../assets/images/park/sg-park-bg.jpg" alt="" width="100%" height="auto" /> -->
         <div class="urban_lakes_banner mt-5">
           <img src="../assets/images/prakriti/cu1.png" alt="banner1" />
           <img src="../assets/images/prakriti/cu2.png" alt="banner1" />
@@ -349,7 +395,8 @@
               DOWNLOAD BROCHURE
             </button>
             <!-- download brochure modal -->
-            <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -547,7 +594,7 @@
                 <option value="Sugam Habitat">Sugam Habitat</option>
                 <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
                 <option value="Sugam Serenity">Sugam Serenity</option> -->
-              <!-- </select>
+  <!-- </select>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Your Name*</label>
@@ -586,9 +633,9 @@
     style="width:130px;height:40px;top:30%;padding:0;border:none;">
     Enquire Now
   </button> -->
-  
+
   <div class="text-center mt-5 book-online-1">
-      <a data-toggle="modal" data-target="#exampleModal2" href="" class="btn btn-custom">ENQUIRY NOW</a>
+    <a data-toggle="modal" data-target="#exampleModal2" href="" class="btn btn-custom">ENQUIRY NOW</a>
   </div>
 
   <!-- enquire now modal -->
@@ -638,7 +685,8 @@
   </div> -->
   <div class="text-center mt-5 book-online" style="right: -67px;">
     <a href="https://secure.morya.info/users/sign_in" data-toggle="modal" data-target="#exampleModal3"
-    data-controls-modal="#formpopup" data-backdrop="static" data-keyboard="false" href="javascript:void(0);" class="btn btn-custom">DOWNLOAD BROCHURE</a>
+      data-controls-modal="#formpopup" data-backdrop="static" data-keyboard="false" href="javascript:void(0);"
+      class="btn btn-custom">DOWNLOAD BROCHURE</a>
   </div>
 
   <!-- download brochure side btn modal -->
@@ -702,7 +750,8 @@
   <script src="../js/slick-slider.js"></script>
   <script src="../js/magnific.js"></script>
   <!-- Last update by Bijon -->
-  <script src="https://www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript" data-bot="25434143"></script>
+  <script src="https://www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript"
+    data-bot="25434143"></script>
 </body>
 
 </html>
